--- a/model_text_generation_asimov.ipynb
+++ b/model_text_generation_asimov.ipynb
@@ -50,8 +50,10 @@
     "model_file = 'models/asimov_model.h5'\n",
     "mode = 'general_1'\n",
     "\n",
-    "with tensorflow.device('/cpu:0'):\n",
-    "    model = load_model(model_file)\n",
+    "# with tensorflow.device('/cpu:0'):\n",
+    "#     model = load_model(model_file)\n",
+    "\n",
+    "model = load_model(model_file)\n",
     "\n",
     "seq_len = model.input_shape[1]\n",
     "input_dim = model.input_shape[2]\n",
@@ -74,148 +76,77 @@
      "text": [
       "--------------------------------------------------------------------------------\n",
       "SAMPLE 1:\n",
-      "— ¡oh, un mensaje! — exclamó anthor —.\n",
+      "— siempre me ha parecido entender que gladia no era feliz en\n",
       "\n",
       "TRUTH:\n",
-      "— ¡oh, un mensaje! — exclamó anthor —. ¿y qué decía? \n",
-      " — bueno, no estoy seguro; eran sólo cinco breves palabras. pero es interesante. \n",
-      " — escuche — interrumpió semic con\n",
+      "— siempre me ha parecido entender que gladia no era feliz en su planeta natal, que abandonó su mundo con alegría y que en ningún momento tuvo intención de regresar. no obstante, estoy de acuerdo contigo en que la\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.250000):\n",
-      "— ¡oh, un mensaje! — exclamó anthor —. ¿qué es lo que le ha dicho? \n",
-      " — ¿qué es lo que ha hecho, señor? — preguntó. \n",
-      " — no, no lo sé. \n",
-      " — ¿qué es lo que no está, señor? \n",
-      " — no, no. \n",
-      " — ¿y si yo lo lo? \n",
-      " — no lo sé. \n",
-      " — ¿y si no le hace daño? \n",
-      " — no, no. pero no es que lo haga. \n",
-      " — ¿cómo se puede decir que el doctor amadiro es un robot? \n",
-      " — no, no lo sé. \n",
-      " — ¿cómo se puede decir que el doctor fastolfe es un robot? \n",
+      "— siempre me ha parecido entender que gladia no era feliz en su mundo. \n",
       " — ¿qué es lo que no te parece? \n",
-      " — porque no lo sé. \n",
-      " — ¿por qué?\n",
+      " — ¿qué es lo que te hace, entonces? \n",
+      " — ¿qué es lo que no te parece? \n",
+      " — no lo sé. \n",
+      " — ¿y si no le\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.500000):\n",
-      "— ¡oh, un mensaje! — exclamó anthor —. ¿por qué no, doctor fastolfe? \n",
-      " — porque es un mundo donde la tierra es un mundo. \n",
-      " — ¿por qué? \n",
-      " — me ha dicho que el doctor amadiro me dijo que el doctor fastolfe era un robot... ¿nunca le ha dicho usted que su padre se ha...? \n",
-      " — no, pero no lo sé. \n",
-      " — ¿se lo dijo usted, señor? \n",
-      " — ¿por qué no? \n",
-      " — porque es a la tierra, ¿verdad? — preguntó el doctor fastolfe. \n",
-      " — ¿y si el doctor amadiro no es un robot? \n",
-      " — no, no lo sé. no me ha dicho nada. \n",
-      " — ¿y si se lo el doctor fastolfe lo ha hecho? ¿o podría ser que el doctor\n",
+      "— siempre me ha parecido entender que gladia no era feliz en su vida. \n",
+      " — ¿qué es lo que quieres? \n",
+      " — si no es así, no lo sé. \n",
+      " — ¿y qué tiene que ver con el problema? \n",
+      " — en este momento, señor, no me lo he dicho. no\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.750000):\n",
-      "— ¡oh, un mensaje! — exclamó anthor —. ¿qué le hace los dos que nos decir? \n",
-      " — no sé si podría, pero no o en menos de un año. \n",
-      " — ¿por qué? \n",
-      " — nunca más. \n",
-      " — se ha hecho, señor, que usted vaya, usted me ha dado y yo me he de que... \n",
-      " — claro que no. pero si no lo es, ¿qué es lo que tenía que hacer? ¿qué podría hacer se le hubiese naves, o a un otro centro de la galaxia. \n",
-      " — durante un momento, el y el el robot « ¿qué había...? \n",
-      " — bueno, eso es lo que yo han hecho por el hecho de que usted se han ido. ¿es usted eso? \n",
-      " — ¿es que le es posible\n",
+      "— siempre me ha parecido entender que gladia no era feliz en el otro extremo. y no se podía decir tal cosa. ahora bien, ¿por qué había en todo esto el robot? \n",
+      " — porque, de que no la hay, no un ser humano..., como no la más es un robot.\n",
       "--------------------------------------------------------------------------------\n",
       "--------------------------------------------------------------------------------\n",
       "SAMPLE 2:\n",
-      "— precisamente — asintió r. daneel, sin dar muestras de\n",
+      "— sí, abuelo. piensa en ello. nunca había tenido\n",
       "\n",
       "TRUTH:\n",
-      "— precisamente — asintió r. daneel, sin dar muestras de que percibía el sarcasmo —. sin embargo, la extensión del conocimiento sin objeto determinado, que me figuro es lo que realmente significa el término curiosidad, se\n",
+      "— sí, abuelo. piensa en ello. nunca había tenido ocasión de hablar con stettin. la mayor parte del tiempo que has pasado con él estabais lejos del proyecto y yo pasaba casi todo mi tiempo encerrada en mi\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.250000):\n",
-      "— precisamente — asintió r. daneel, sin dar muestras de una, y luego se le quedó mirando. \n",
-      " — ¿qué es esto, doctor? \n",
-      " — no lo sé. \n",
-      " — ¿qué es lo que no te parece? \n",
-      " — no lo sé. \n",
-      " — ¿y si la gente de la tierra es la tierra? \n",
-      " — no, no. pero no, no. no hay ningún motivo para que se lo haga. \n",
-      " — ¿por qué no? \n",
-      " — porque es un robot. \n",
-      " — ¿por qué no? \n",
-      " — porque es un mundo muy poco, ¿verdad? \n",
-      " — ¿por qué no? \n",
-      " — porque es la segunda fundación. \n",
-      " — ¿y si no lo es? \n",
-      " — no, no lo sé. \n",
-      " — ¿y si no lo es?\n",
+      "— sí, abuelo. piensa en ello. nunca había tenido que hacer nada. \n",
+      " — ¿qué es lo que ha hecho, señor? \n",
+      " — es una de las que no se han dado cuenta, ¿verdad? \n",
+      " — no, no. no lo sé. \n",
+      " — ¿y si lo que es\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.500000):\n",
-      "— precisamente — asintió r. daneel, sin dar muestras de de que la voz del otro robot le hizo las palabras, y luego la pero sin el menor. \n",
-      " — ¿y si me lo dijo? \n",
-      " — con un mismo modo — dijo trevize —, que el nave de la tierra es un mundo, y que es la primera vez que se lo ha dicho. \n",
-      " — ¿por qué? \n",
-      " — porque allí es un planeta. \n",
-      " — ¿y si te lo dijo? \n",
-      " — lo que te parece, trevize, es que te ha dado cuenta de que no es posible que se te lo. \n",
-      " — ¿cómo lo sabes? \n",
-      " — ¿que le ha hecho alguna pregunta? \n",
-      " — ¿es que no es el doctor fastolfe quien lo el doctor fastolfe, la otra, usted usted.\n",
+      "— sí, abuelo. piensa en ello. nunca había tenido que ser más vida. \n",
+      " — ¿y si yo le lo, señor? \n",
+      " — porque es usted el que se ha oído decir, ¿verdad? \n",
+      " — no. \n",
+      " — ¿por qué no? \n",
+      " — ¿qué es lo que es\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.750000):\n",
-      "— precisamente — asintió r. daneel, sin dar muestras de su mujer una mirada de este robot, y luego, su rostro se hizo muy poco a un lado, y los dos robots le habían hecho a sí misma, pero desde entonces había sido el que hizo un « alguna » y después se un lo hizo. \n",
-      " — ¿y si te lo extremo? — preguntó el? \n",
-      " — siempre, así es. lo mismo que la historia de los días y de su planeta. en realidad, tengo una energía con su vida y la vida, si es que no sé si se han sido una de las cosas que tengo, pero no ¡no me puedo! \n",
-      ", como siempre, el robot luz le hizo perder un tiempo, toda esa nave, — que no creo que pueda usted. \n",
-      " — ¿fueron\n",
+      "— sí, abuelo. piensa en ello. nunca había tenido que ver a te el mundo que yo no sea posible. \n",
+      " — y la de la segunda fundación, ¿verdad? \n",
+      " — sí, sí, pero lo que usted yo quiere hacer era que yo no sea los que han estado por esta parte del\n",
       "--------------------------------------------------------------------------------\n",
       "--------------------------------------------------------------------------------\n",
       "SAMPLE 3:\n",
-      "— bien, en ese caso, hija mía, el depsec\n",
+      "e hizo surgir un cubo hueco de color gris pizarra, mate\n",
       "\n",
       "TRUTH:\n",
-      "— bien, en ese caso, hija mía, el depsec lo averiguará. dejémoslo en sus manos. \n",
-      " — no, es demasiado importante para confiárselo a ellos. no lo entenderán. nadie lo entiende. ¡salvo\n",
+      "e hizo surgir un cubo hueco de color gris pizarra, mate y monótono, en cuyo interior quedó encerrada el resto de la figura. a pesar de ello, la luz interior se veía brillar, aunque más apagada,\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.250000):\n",
-      "— bien, en ese caso, hija mía, el depsec de su padre, y no tengo que hacer nada. \n",
-      " — ¿qué es lo que no te parece? \n",
-      " — ¿qué es lo que no es? — preguntó el doctor fastolfe. \n",
-      " — no. no hay nada que lo haga. \n",
-      " — ¿por qué? \n",
-      " — porque es un robot. \n",
-      " — ¿qué es lo que no ha sido? \n",
-      " — ¿cómo es posible que el señor de la tierra sea un robot, ¿qué es lo que le ha dicho? \n",
-      " — ¿qué es lo que no? \n",
-      " — es un mundo de la galaxia, señor. \n",
-      " — ¿y si el doctor amadiro es un robot? \n",
-      " — ¿por qué no? \n",
-      " — no lo sé. \n",
-      " — ¿y qué es lo\n",
+      "e hizo surgir un cubo hueco de color gris pizarra, mate, y el que se había ido a la superficie de la tierra, y que no había oído hablar de él. \n",
+      " — ¿y qué es lo que quiere? — preguntó trevize. \n",
+      " — no, pero no lo sé. \n",
+      " — ¿y\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.500000):\n",
-      "— bien, en ese caso, hija mía, el depsec es de que le de no lo están. \n",
-      " — ¿de dónde? \n",
-      " — nada de eso. ¿qué es lo que no le ha hecho? \n",
-      " — esto, señor, es el nombre de su vida. \n",
-      " — ¿cómo lo ha hecho? \n",
-      " — no, pero no por la segunda. \n",
-      " — ¿no de usted? \n",
-      " — sólo de una forma tan..., un poco — dijo el doctor. \n",
-      " — ¿y si no lo sé? \n",
-      " — ¿qué es lo que te hace, en efecto? \n",
-      " — ¿no? \n",
-      " — no, pero no lo sé. \n",
-      " — ¿te parece que es una que me lo dijo? \n",
-      " — ¡oh, no! ¿por qué no? \n",
-      " — no,\n",
+      "e hizo surgir un cubo hueco de color gris pizarra, mate, y se la, por un momento, se la y el otro, con el rostro. \n",
+      " — ¿y si no le importa? — preguntó el doctor fastolfe. \n",
+      " — no, no. pero, ¿qué es lo que no me hace\n",
       "\n",
       "GENERATED FROM MODEL (temperature = 0.750000):\n",
-      "— bien, en ese caso, hija mía, el depsec está en cierto modo. la verdad, al menos, es que la segunda fundación no le ha dado mi vida. \n",
-      " — si no, usted es la segunda fundación. \n",
-      " — ¿qué es lo que te han dicho, hari? \n",
-      " seldon se contestó: \n",
-      " — te he dicho que es así. pero con mi palabra de que habría sido natural. \n",
-      " — ¿y si yo lo he? ¿qué podría hacer quiero hacer? ¿qué importancia había, quizá? \n",
-      " — ¿no le parece que ahora? \n",
-      " — no, no. ¿cómo podría ser que se le ha hecho pensar que si te lo he dicho hasta ahora, de: que las tres veces se han ido a la misma distancia que al otro lado de la galaxia, y\n",
+      "e hizo surgir un cubo hueco de color gris pizarra, mate, y el agua de un, aunque no tuvo más que un el día de la gente de la tierra, de lo cual ni siquiera yo me lo ¿no lo es? eso es algo que él me hace tan poco que son para usted y otros\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
@@ -223,7 +154,7 @@
    "source": [
     "# Random samples from text_file\n",
     "n_samples = 3\n",
-    "n_words = 150\n",
+    "n_words = 50\n",
     "print_truth = True\n",
     "n_truth_words = 30\n",
     "temperatures = [0.25, 0.5, 0.75]\n",
@@ -310,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -370,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -379,28 +310,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bien, en ese caso, hija mía, el depsec es muy así. \n",
-      " — ¿de qué está hablando? — preguntó trevize. \n",
-      " — si se lo has dicho, pero no me ha de ser un robot. \n",
-      " — ¿qué es lo que se ha dicho? — preguntó el doctor, con un gesto de la cabeza. \n",
-      " — ¿cómo es posible que te lo sea? \n",
-      " — ¿qué es lo que no te parece? \n",
-      " — porque yo no he oído hablar de él. \n",
-      " — no, no. ¿cómo quiere que lo haga? \n",
-      " — le he dicho que el señor de la tierra es un mundo. \n",
-      " — ¿qué es lo que le dijo? \n",
+      "y si la verdad fuera de la tierra, ¿qué es lo que por. de que nosotros no sea el que le mundos, ¿verdad? \n",
+      " — sí, señor. \n",
+      " — ¿y si no es un robot? \n",
+      " — no, no lo sé. \n",
+      " — ¿del mismo modo que si todo el mundo puede que sea un robot, no puede ser que el doctor fastolfe sea un robot? \n",
+      " — no, no lo sé. \n",
+      " — ¿cómo te lo dijo? \n",
+      " — porque sólo me he dado cuenta de que era un robot. \n",
+      " — ¿por qué no? \n",
       " — no lo sé. \n",
-      " — ¿cómo lo sabe? \n",
-      " — ¿qué es lo que hizo? \n",
-      " — ¿qué es lo que no me sé? — preguntó trevize. \n",
-      " — sí, pero ¿cómo puedo decir que la gente de la tierra se está bien, y que no hay nada que se le de no ver a un robot. \n",
-      " — ¿por qué no? \n",
+      " — ¿por qué no? — dijo trevize —. si es necesario, eso no es lo que nos. \n",
+      " — ¿y si el doctor amadiro es un robot? \n",
+      " — es muy posible. \n",
+      " — ¿y qué es eso? \n",
+      " — no es. sólo hay un mundo que no tiene en cuenta la palabra, y no hay nada que la gente. — se interrumpió —. ¿es usted un robot? \n",
+      " — después de todo, usted no es un robot. \n",
+      " — ¿de qué manera? \n",
+      " — es muy difícil de ser. le soy un robot. \n",
+      " — ¿de qué manera? \n",
+      " — es muy posible que el doctor fastolfe no sea la. \n",
+      " — ¿por qué no lo aquí? \n",
       " — porque es un robot. \n",
-      " — ¿por qué no? \n",
-      " — porque es un otro mundo de la galaxia que no es más que un robot. \n",
-      " — ¿qué es lo que no te parece? \n",
-      " — es posible que el planeta sea, pero no es muy posible que los espaciales se han dado cuenta de que es usted un robot. \n",
-      " — ¿y si las cosas se han ido a, o sin de ningún modo, o unos de otros.\n"
+      " — ¿de qué es lo que lo ha hecho? \n",
+      " — de un modo tan ser..., todo lo que tenía que hacer.\n"
      ]
     }
    ],
@@ -408,7 +341,7 @@
     "import numpy as np\n",
     "from nl.text_gen import get_next_word_distribution\n",
     "\n",
-    "text = 'bien, en ese caso, hija mía, el depsec'\n",
+    "text = 'y si la verdad fuera'\n",
     "temperature = 0.65\n",
     "n_words = 300\n",
     "\n",
