--- a/model_text_generation_bible.ipynb
+++ b/model_text_generation_bible.ipynb
@@ -2,21 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n",
-      "/home/m20163692/anaconda3/envs/tf/lib/python3.5/site-packages/gensim/utils.py:1015: UserWarning: Pattern library is not installed, lemmatization won't be available.\n",
-      "  warnings.warn(\"Pattern library is not installed, lemmatization won't be available.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keras fix\n",
     "import tensorflow\n",
@@ -30,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -49,7 +39,9 @@
     "text_file = 'text_files/bible_clean.txt'\n",
     "model_file = 'models/bible_model.h5'\n",
     "\n",
-    "model = load_model(model_file)\n",
+    "with tensorflow.device('/cpu:0'):\n",
+    "    model = load_model(model_file)\n",
+    "\n",
     "seq_len = model.input_shape[1]\n",
     "input_dim = model.input_shape[2]\n",
     "\n",
